sg-15 - Fix person alignments

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-public-body.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-public-body.scss
@@ -196,7 +196,7 @@
         }
 
         .__people-title {
-          margin-bottom: 20px;
+          margin-bottom: 0;
         }
 
         .person {
@@ -228,8 +228,7 @@
               display: block;
 
               .person-bio {
-                .person-title,
-                .person-subtitle {
+                .person-title {
                   opacity: 0.65;
                 }
               }
